Bisect in mirror modifier doesn't work properly #60244

Closed
opened 2019-01-06 22:29:36 +01:00 by Robin Karlsson · 7 comments

System Information
Operating system: Windows 10
Graphics card: AMD Radeon Vega 64

Blender Version
Broken: 2.80 2edd32c168
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error
When moving the model the model along the X axis faces disappear unexpectedly (not just along the actual symmetry line)

Exact steps for others to reproduce the error

  1. Open the attached file
  2. Move the model along the X axis
  3. Observe the problem
    Mirror_Bug.blend
**System Information** Operating system: Windows 10 Graphics card: AMD Radeon Vega 64 **Blender Version** Broken: 2.80 2edd32c168d3 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** When moving the model the model along the X axis faces disappear unexpectedly (not just along the actual symmetry line) **Exact steps for others to reproduce the error** 1. Open the attached file 2. Move the model along the X axis 3. Observe the problem [Mirror_Bug.blend](https://archive.blender.org/developer/F6203309/Mirror_Bug.blend)
Author

Added subscriber: @RobinKarlsson

Added subscriber: @RobinKarlsson
Author

Applying the location seems to fix the problem but it still seems like a bug.

Applying the location seems to fix the problem but it still seems like a bug.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2019-01-07 14:48:50 +01:00

Confirmed, fix incoming.

Confirmed, fix incoming.

Added subscriber: @kioku

Added subscriber: @kioku

This issue was referenced by 56ceaea5b5

This issue was referenced by 56ceaea5b52ebb58d15eb7aef5f4ee8d4ff6065f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60244
No description provided.