Fix T60244: Bisect in mirror modifier doesn't work properly.

That was indeed not working properly, not at all. Except for
the basic case, but as soon as you used another object to define the
mirror plane, it would be utterly broken, in several different ways!